gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TrainerUpdateException.java
package com.example.gymcrm.api.rest.error.exception;

public class TrainerUpdateException extends RuntimeException {
    public TrainerUpdateException(String message) {
        super(message);
    }
}
